--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -4,6 +4,12 @@
 
 <p><%= @task.completed ? "This task is completed :D" : "This task is not yet completed :(" %></p>
 
-<%= link_to "Back to list", tasks_path %>
-<%= link_to "Edit task", edit_task_path %>
+<%= link_to tasks_path do %>
+  <div class="btn btn-primary">Back to list</div>
+<% end %>
+
+<%= link_to edit_task_path do %>
+  <div class="btn btn-primary">Edit task</div>
+<% end %>
+
 <%= link_to task_path(@task), method: :delete, data: {confirm: "Are you sure?"} do %> <i class="fas fa-trash"></i> <% end %>
