--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,12 +1,17 @@
-<%= form_for @task do |t| %>
-	<%= t.label :title, "Ingrese el título" %>
-	<%= t.text_field :title %>
+<%= form_for(@task) do |t| %>
+	<div class="form-group">
+		<%= t.label :title, "Task title" %>
+		<%= t.text_field :title, class: "form-control" %>
 
-	<%= t.label :details, "Ingrese los detalles" %>
-	<%= t.text_field :details %>
+		<%= t.label :details, "Task details" %>
+		<%= t.text_field :details, class: "form-control" %>
 
-    <%= t.label :completed, "Completed?" %>
-	<%= t.check_box :completed %>
+		<%= t.label :completed, "Completed?" %>
+		<%= t.check_box :completed %>
 
-	<%= t.submit %>
+		<%= t.submit class:"btn btn-primary" %>
+			<%= link_to tasks_path do %>
+			<div class="btn btn-primary">Back to list</div>
+		<% end %>
+	</div>
 <% end %>
